tests/script/negative/roles/illtyped-2.s
int [roles: "Alice"] x;

@initial
go() { transitionTo(@terminal) }
