tests/script/negative/roles/illtyped-2.out
Type error at Line 1, Column 13:
   Expected: 'account' inferred from a precondition 'roles' on Line 1, Column 13
   But got:  'text' inferred from literal '"Alice"' on Line 1, Column 13